@startuml
skinparam linetype ortho
skinparam nodesep 100
skinparam ranksep 100
hide empty methods
hide empty attributes

abstract class Algorithm <<algorithms>>

entity Vehicle <<models>> {
  identifier: str
  capacity: float
  timeout: float
}

entity Route <<models>> {
  uuid: UUID
}

entity Trip <<models>> {
  identifier: str
  on_time_bonus: float
  capacity: float
  timeout: float
}

entity PlannedTrip <<models>> {
}

entity Planning <<models>> {
  computation_time: float
}

entity Result <<models>> {
}


entity Stop <<models>> {
  starting_time?: float
}

entity Service <<models>> {
  earliest: float
  latest: float
  duration: float
}

entity Job <<models>> {
}

entity Fleet <<models>> {
}

entity Position <<models>> {
  coordinates: Tuple[float, ...]
}

entity Surface <<models>> {
  uuid: UUID
}



Job o-"*" Trip
Algorithm -- Result: generates >
Result --o Planning
Result o-- Fleet
Result o-- Job
Algorithm o-- Fleet: receives <
Algorithm o-- Job: receives <
Planning o--"*" Route
Trip o- PlannedTrip: planified >
Trip o-right-"origin" Service
Trip o-right-"destination" Service
Service o--"1" Position: located at >
PlannedTrip "*"-up-"pickup" Stop
PlannedTrip "*"-up-"delivery" Stop
Route --"2..*" Stop
Position "1"-o Stop
Position "*"-up-o Surface
Vehicle "1"--o Stop
Vehicle "1"--o PlannedTrip
Vehicle "1"-down-o Route
Stop "previous"-- Stop
Fleet o--"*" Vehicle
Vehicle o-left-"origin" Service
Vehicle o-left-"destination" Service


@enduml
